--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Hitomi Happy Birthday</title>
 	<!-- <meta name="description" content="" /> -->
-	<meta name="Author" content="Dorin Grigoras [www.stepofweb.com]" />
+	<!-- <meta name="Author" content="Dorin Grigoras [www.stepofweb.com]" /> -->
 	<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
 
